stretched images fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -73,10 +73,7 @@ body {
   }
 }
 main {
-  display: flex;
   width: 100%;
-  flex-grow: 1;
-  min-height: 100vh;
 }
 
 #logo a {
